log
Thu 24 Aug 2023 07:52:11 PM UTC: 
 tests:  0|6
total_score: 0/70
06a09f5
Thu 24 Aug 2023 08:08:34 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e18a940
Thu 24 Aug 2023 08:09:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:37:3: error: statement with no effect [-Werror=unused-value]
   37 |   newList
      |   ^~~~~~~
list.c:37:10: error: expected ‘;’ before ‘}’ token
   37 |   newList
      |          ^
      |          ;
   38 | }
      | ~         
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2c2adcf
Thu 24 Aug 2023 08:10:01 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
test.c: In function ‘createList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:80:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   80 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:71:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   71 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:58:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   58 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fb4f6b8
Thu 24 Aug 2023 08:10:58 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
test.c: In function ‘createList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:82:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   82 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:73:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   73 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:60:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   60 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6468faf
Thu 24 Aug 2023 08:12:03 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
773d769
Thu 24 Aug 2023 08:12:31 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
test.c: In function ‘createList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:81:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   81 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:72:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   72 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:59:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   59 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f7e41a2
Thu 24 Aug 2023 08:13:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘createList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:81:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   81 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:72:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   72 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:59:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   59 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fcf9430
Thu 24 Aug 2023 08:23:16 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
test.c: In function ‘createList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:84:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   84 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:75:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   75 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:62:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   62 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fcff7ed
